tests/files/flow_controller_tests/should_fail/055.cmdr
x = true;
print sec(x);